Add russion translation. Small update to hewbrew translation.
git-svn-id: https://fslint.googlecode.com/svn/trunk@108 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,6 @@
 2.23 dd/mm/yy
 	* Translations:
-		* Added: Italian, Hewbrew.
+		* Added: Hewbrew, Italian, Russian.
 		* Updated: Chinese (simplified), French, German,
 		  Swedish, Vietnamese.
 	* Fixes:
