Ensure that directories added to paths to exclude, do not have a trailing slash when passed to findup. `find` will just ignore them if this is the case: http://savannah.gnu.org/bugs/?20970
git-svn-id: https://fslint.googlecode.com/svn/trunk@110 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -9,6 +9,7 @@
 		* Make the "within groups" selection sub menu respond to
 		  not just right click, after clicking the "Select" button.
 		  This issue was reported by Andrew U. Frank.
+		* Make sure the GUI honours all "directories to exclude".
 		* Remove brace expansion from debian/rules to allow package
 		  to build on debian systems where dash is the default shell.
 		* Fixed a bug reintroduced in 2.22 (GUI only) where duplicates
