--- a/po/sv.po
+++ b/po/sv.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: fslint 2.22\n"
+"Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-06-27 14:29+0100\n"
 "PO-Revision-Date: 2007-09-10 19:33+0100\n"
