{md5,sha1}sum escape \ and \n chars in the output checksums. Now we ignore files containing \n chars anyway, so this escaping is redundant and problematic. Therefore add a little sed magic to remove it.
git-svn-id: https://fslint.googlecode.com/svn/trunk@118 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,7 @@
 2.25 dd/mm/yy
+	* Fixes:
+		* Don't ignore duplicate files with '\' chars in the path.
+		  This issue was reported by Andrew U. Frank.
 
 2.24 19/09/07
 	* Translations:
