Use and document better syntax for excluding paths.
Allow users to type wildcards into the paths to exclude lise.

Also sanitize user specified wildcards/paths,
removing multiple //// etc.


git-svn-id: https://fslint.googlecode.com/svn/trunk@120 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,8 @@
 	* Fixes:
 		* Don't ignore duplicate files with '\' chars in the path.
 		  This issue was reported by Andrew U. Frank.
+		* Use and document better syntax for excluding paths.
+		* Honour/sanitize user specified wildcards for excluding paths.
 
 2.24 19/09/07
 	* Translations:
