This fixes debian bug 446326. Remove the bash dependency from fix_ws.sh
git-svn-id: https://fslint.googlecode.com/svn/trunk@123 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 fslint (2.25-1) unstable; urgency=low
 
   * Bump to devel version
+  * Remove bash dependency from "fix whitespace" script (Closes: #446326)
 
  -- Pádraig Brady <P@draigBrady.com>  Thu, 19 Sep 2007 10:40:00 +0000
 
