Make file deletion much easier by supporting the Delete key, auto removing groups from display when only 1 item remaining and giving the option to not confirm every delete operation.
Suggestion from endolith at g mail.com



git-svn-id: https://fslint.googlecode.com/svn/trunk@124 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -5,6 +5,10 @@
 		* Use and document better syntax for excluding paths.
 		* Honour/sanitize user specified wildcards for excluding paths.
 		* Tweak "fix whitespace" script to run on dash (ubuntu).
+	* Improvements:
+		* Make file deletion much easier by supporting the Delete key,
+		  auto removing groups from display when only 1 item remaining
+		  and giving the option to not confirm every delete operation.
 
 2.24 19/09/07
 	* Translations:
