Don't abort reporting duplicates if the GUI can't process a particular file. Andrew Frank noticed this when a filename containing spaces from an NTFS filesystem had spaces escaped with backslashes (still not sure what caused this). Anyway the GUI may not have access to the file because it may have been removed, changaed permissions etc. in the meantime.
git-svn-id: https://fslint.googlecode.com/svn/trunk@132 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,8 @@
 	* Fixes:
 		* Don't ignore duplicate files with '\' chars in the path.
 		  This issue was reported by Andrew U. Frank.
+		* Don't abort reporting duplicates if the GUI can't process
+		  a particular file. This issue was reported by Andrew U. Frank.
 		* Use and document better syntax for excluding paths.
 		* Honour/sanitize user specified wildcards for excluding paths.
 		* Tweak "fix whitespace" script to run on dash (ubuntu).
