Document feature enhancement in previous commit
git-svn-id: https://fslint.googlecode.com/svn/trunk@134 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -12,6 +12,8 @@
 		* Make file deletion much easier by supporting the Delete key,
 		  auto removing groups from display when only 1 item remaining
 		  and giving the option to not confirm every delete operation.
+		* When packages for deletion are auto selected due to
+		  dependencies, group all selected packages for easier review.
 
 2.24 19/09/07
 	* Translations:
