Don't reset the column width after ever delete operation. This is highly annoying if the user has resized the columns. The was suggested by Endolith.
git-svn-id: https://fslint.googlecode.com/svn/trunk@136 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,8 +10,9 @@
 		* Allow cli scripts to run from paths containing whitespace.
 	* Improvements:
 		* Make file deletion much easier by supporting the 'Delete' key,
-		  auto removing groups from display when only 1 item remaining
-		  and giving the option to not confirm every delete operation.
+		  auto removing groups from display when only 1 item remaining,
+		  giving the option to not confirm every delete operation and
+		  not resetting column widths on every delete operation.
 		* When we auto select packages for deletion due to dependencies,
 		  group all selected packages together for easier review.
 
