Do simpler less buggy parsing of parameters to pass on to find. For example the ! in the following was treated as a filename and rearranged:
./findup /usr/lib/python2.5/ -name "*.py" ! -name "*.py[co]"



git-svn-id: https://fslint.googlecode.com/svn/trunk@137 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -8,6 +8,7 @@
 		* Honour/sanitize user specified wildcards for excluding paths.
 		* Tweak "fix whitespace" script to run on dash (ubuntu).
 		* Allow cli scripts to run from paths containing whitespace.
+		* Fix erroneous reordering of certain find command parameters.
 	* Improvements:
 		* Make file deletion much easier by supporting the 'Delete' key,
 		  auto removing groups from display when only 1 item remaining,
