Updated translation for Malay
git-svn-id: https://fslint.googlecode.com/svn/trunk@140 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,6 @@
 2.25 dd/mm/yy
+	* Translations:
+		* Updated: Malay.
 	* Fixes:
 		* Don't ignore duplicate files with '\' chars in the path.
 		  This issue was reported by Andrew U. Frank.
