Indicate using the busy mouse cursor that the app will be unresponsive during possibly prolonged delete/merge/clean actions.
I noticed when doing this that Fedora 8 at least
links the "busy" cursor to the "busy interactive" one?


git-svn-id: https://fslint.googlecode.com/svn/trunk@142 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -18,6 +18,8 @@
 		  not resetting column widths on every delete operation.
 		* When we auto select packages for deletion due to dependencies,
 		  group all selected packages together for easier review.
+		* Indicate using the mouse pointer that the application is busy,
+		  during the possibly long cleaning/deleting/merging processes.
 
 2.24 19/09/07
 	* Translations:
