Sync up po files with updated line numbers Merge in updated French and German translations from launchpad Add new Czech and Turkish translations from launchpad
git-svn-id: https://fslint.googlecode.com/svn/trunk@145 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,7 @@
 2.25 dd/mm/yy
 	* Translations:
-		* Updated: Malay.
+		* Added: Czech, Turkish.
+		* Updated: French, German, Malay.
 	* Fixes:
 		* Don't ignore duplicate files with '\' chars in the path.
 		  This issue was reported by Andrew U. Frank.
