Fix Ubuntu bug 231235. When finding duplicates, handle \f\r\v whitespace characters that occur not at the end of filenames. Previously an exception was thrown (which the gui displays).
git-svn-id: https://fslint.googlecode.com/svn/trunk@146 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -12,6 +12,8 @@
 		* Tweak "fix whitespace" script to run on dash (ubuntu).
 		* Allow cli scripts to run from paths containing whitespace.
 		* Fix erroneous reordering of certain find command parameters.
+		* When finding dupes, handle \f\r\v characters within filenames,
+		  rather than displaying an exception (Ubuntu bug 231235).
 	* Improvements:
 		* Make file deletion much easier by supporting the 'Delete' key,
 		  auto removing groups from display when only 1 item remaining,
